--- a/interests.html
+++ b/interests.html
@@ -50,6 +50,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </header>
     <section class="container-fluid">
         <div class="row">
@@ -196,8 +197,10 @@
         </div>
 
     </footer>
+    
+
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPLAaO_7TA8B5WoKF3GZI-6ewSUmaCzKw&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
 </body>
 
